still debuggin external link. removed google analytics code

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: URI CSC 212
-url: "http://vcc-csc212.github.io/"
+url: "https://vcc-csc212.github.io/"
 show_full_navigation: true
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
