--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: URI CSC 212
 url: "https://vcc-csc212.github.io/"
-show_full_navigation: true
+show_full_navigation: false
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
